# goit-algo2-hw-03

./: pyproject.toml  readme.md  task_1.py  task_2.py
