[project]
name = "goit-algo2-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Kostiantyn Skliar",email = "skljar.k@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "btrees (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
